# thunderbird-james-ai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  jest.config.ts  manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.mjs  webpack.config.ts
.github/workflows/: adr.yml  ci.yml
_locales/de/: messages.json
_locales/en/: messages.json
docs/: vue-rewrite-phase-01.md  vue-rewrite-verification-baseline.md  vue-rewrite-verification-checklist.md
docs/adr/: 001-manifest-v3-webextension.md  002-hand-rolled-ai-abstraction.md  003-angular-aot-for-ui.md  004-python-pipeline-tooling.md
scripts/: merge-dist.mjs
spec/: ai-providers.md  architecture.md  build.md  features.md  security.md  testing.md  tools.md  ui.md
src/background/: index.ts
src/background/ai/: router.ts  types.ts
src/background/batch/: operations.ts  processor.ts
src/background/context/: attachment-reader.ts  message-reader.ts  thread-builder.ts
src/background/rules/: engine.ts  executor.ts  matcher.ts  scheduler.ts  types.ts
src/background/storage/: cache.ts  crypto.ts  rules-store.ts  (+1 more)
src/types/: thunderbird.d.ts
src/ui/: angular.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
tools/pipeline_runner/: README.md  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  cli.py  runner.py  utils.py
tools/pipeline_runner/pipeline_runner/pipelines/: __init__.py  adr.py  build.py  lint.py  package.py  test.py
tools/pipeline_runner/tests/: test_runner.py  test_utils.py
(+68 files in other folders)
