[tool.poetry]
name = "pipeline-runner"
version = "0.1.0"
description = "CI/CD pipeline orchestrator for the Corvus Thunderbird extension"
authors = ["Corvus Team"]
readme = "README.md"
packages = [{include = "pipeline_runner"}]

[tool.poetry.scripts]
pipeline-runner = "pipeline_runner.cli:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
ruff = "^0.9"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipeline_runner --cov-report=term-missing"
